--- a/Snake/Snake/Snake.vcxproj
+++ b/Snake/Snake/Snake.vcxproj
@@ -148,11 +148,13 @@
     <ClInclude Include="Box.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Snake.h" />
+    <ClInclude Include="SnakeAI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Snake.cpp" />
+    <ClCompile Include="SnakeAI.cpp" />
     <ClCompile Include="소스.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
